@@ -2,6 +2,8 @@ glibc (2.23-5) UNRELEASED; urgency=medium
 
   * patches/hurd-i386/git-recvmsg.diff: New patch, fixes recvmsg on PF_LOCAL
     sockets with msg_name != NULL.  Closes: #833558.
+  * hurd-i386/libpthread_version.diff: Really fix pthread_setcancelstate
+    aliasing.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 09 Aug 2016 01:45:00 +0200
 
